<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@drawable/forme_header2"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/tswhitesmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/logotech"
        android:translationZ="3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tech_servicebrockwhite" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/bienvenue"
        android:textColor="@color/tsorange"
        android:textSize="20sp"
        android:translationZ="3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:background="@color/tsblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/depanDashboard"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/input3"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/d_pannage"
        android:textAlignment="center"
        android:textColor="@color/tswhitesmoke"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:drawableTopCompat="@drawable/baseline_home_repair_service_24" />

    <TextView
        android:id="@+id/constDashboard"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input4"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/construction"
        android:textAlignment="center"
        android:textColor="@color/tswhitesmoke"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:drawableTopCompat="@drawable/construction" />

    <TextView
        android:id="@+id/bureauDashboard"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input4"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/bureau_d_tude"
        android:textAlignment="center"
        android:textColor="@color/tswhitesmoke"
        android:textSize="14.5sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constDashboard"
        app:drawableTopCompat="@drawable/baseline_home_work_24" />

    <TextView
        android:id="@+id/quinDashboard"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input4"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/quincaillerie"
        android:textAlignment="center"
        android:textColor="@color/tswhitesmoke"
        android:textSize="14.5sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bureauDashboard"
        app:drawableTopCompat="@drawable/baseline_shopping_basket_24" />

    <TextView
        android:id="@+id/archiDashboard"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input4"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/architecture"
        android:textAlignment="center"
        android:textColor="@color/tswhitesmoke"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depanDashboard"
        app:drawableTopCompat="@drawable/baseline_architecture_24" />

    <TextView
        android:id="@+id/laboDashboard"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input4"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/laboratoire"
        android:textAlignment="center"
        android:textColor="@color/tswhitesmoke"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/archiDashboard"
        app:drawableTopCompat="@drawable/baseline_science_24" />

    <ImageButton
        android:id="@+id/vsDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input2"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quinDashboard"
        app:srcCompat="@drawable/baseline_hearing_24"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/homeDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@drawable/baseline_home_2" />

    <ImageView
        android:id="@+id/btnProjet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@drawable/baseline_dashboard_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@drawable/baseline_person" />

    <ImageView
        android:id="@+id/notifProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_notifications_24"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>